# transcribetools

./: .gitignore  LICENSE  dev.md  firsttest.py  local_whisper.py  main.py  pyproject.toml  readme.md  run_tf.py  single.py  test_whisper.py
data/: 240221_0098GroepChristel_2024-10-18.txt  minimal.m4a
tests/: test_commands.py
transcribetools/: __init__.py  commandline.py  local_wisper_model.py  test_commands.py  transcribe_folder.py
