[project]
name = "TranscribeTools"
version = "0.6.2"
description = "Transcribe and/ot translate all soundfiles in a folder using Whisper"
readme = "README.md"
requires-python = ">= 3.12, <3.14"
dependencies = [
    "attrs>=25.3.0",
    "openai>=1.59.4",
    "openai-whisper>=20250625",
    "pymsgbox>=1.0.9",
    "result>=0.17.0",
    "rich-click>=1.8.5",
    "soundfile>=0.13.1",
    "toml>=0.10.2",
    "transformers",
    "deepl>=1.22.0",
    "keyring>=25.6.0",
    "static-ffmpeg>=2.13",
    "certifi==2025.7.14",
    "docutils==0.22rc5",
]
[project.scripts]
# commandline tool, installable
transcribefolder = "transcribetools.transcribe_folder:cli"

# below needed to run locally
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pytest>=8.3.4",
]

[tool.uv.sources]
tiutools = { path = "../tiutools", editable = true }

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120